--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -6,9 +6,14 @@
     cursor: pointer;
 }
 
-.watch-list i {
+.watchlist i {
     display: flex;
 }
+
+.watchlist i #watchlist-font {
+    font-size: 0.5em;
+}
+
 
 .login i {
     display: flex;
