Frontend: Removed NavBar from Sign up/in pages

--- a/email/templates/login.html.tmpl
+++ b/email/templates/login.html.tmpl
@@ -20,7 +20,7 @@
         <tr>
             <td style="background-color: #ffffff; padding: 40px 30px 40px 30px; text-align: center">
                 <h3>Hello <span text="{{ .username }}"></span>!  This is flema Account registration mail.</h3>
-                <p>Welcome to flema!</p>
+                <p>Sign in to flema</p>
                 <p>Please click the link below and finish account registration.</p>
                 <a href="{{ .registrationUrl }} target=">Activate account</a>
        </tr>
