--- a/email/templates/verification-code.html.tmpl
+++ b/email/templates/verification-code.html.tmpl
@@ -3,7 +3,6 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <style>
         .table {
             border-collapse: collapse;
@@ -12,7 +11,7 @@
             border: 1px solid #cdd1d5;
         }
     </style>
-    <title>flema Account Registration</title>
+    <title>flema email verification</title>
 </head>
 
 <body>
@@ -20,9 +19,12 @@
         <tr>
             <td style="background-color: #ffffff; padding: 40px 30px 40px 30px; text-align: center">
                 <h3>Hello <span text="{{ .username }}"></span>!  This is flema Account registration mail.</h3>
-                <p>Sign in to flema</p>
-                <p>Please click the link below and finish account registration.</p>
-                <a href="{{ .registrationUrl }} target=">Activate account</a>
+                <p>Welcome (back) to flema!</p>
+                <p>Please enter the code below on the verification page</p>
+                <p>{{ .VerificationCode }}</p>
+                <p>
+                    <em style="font-family: sans-serif;">It expires in {{ duration .TTL }} and can only be used once.</em>
+                </p>
        </tr>
     </table>
 </body>
