--- a/email/templates/verification-code.html.tmpl
+++ b/email/templates/verification-code.html.tmpl
@@ -23,7 +23,7 @@
                 <p>Please enter the code below on the verification page</p>
                 <p>{{ .VerificationCode }}</p>
                 <p>
-                    <em style="font-family: sans-serif;">It expires in {{ duration .TTL }} and can only be used once.</em>
+                    <em style="font-family: sans-serif;">It expires in an hour and can only be used once.</em>
                 </p>
        </tr>
     </table>
