--- a/email/templates/activation-link.html.tmpl
+++ b/email/templates/activation-link.html.tmpl
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Activate your hurima account</title>
+    <title>Activate your fleabay account</title>
     <link rel="shortcut icon" href="data:,">
 </head>
 
