--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,15 @@
 :root {
   --max-width: 1170px;
 
-  --color-black: #007bff;
+  --color-primary: #007bff;
+  --color-secondary: #6c757d;
+  --color-success: #28a745;
+  --color-danger: #dc3545;
+  --color-warning: #ffc107;
+  --color-info: #17a2b8;
+  --color-light: #f8f9fa;
+  --color-dark: #343a40;
+
 }
 
 @font-face {
@@ -14,7 +22,6 @@ body {
   font-family: 'Averta', 'Ubuntu', 'Hervetica', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: var(--color-primary);
 }
 
 code { 
